--- a/src/index.css
+++ b/src/index.css
@@ -17,22 +17,26 @@ body {
   font-style: normal;
   font-weight: 400;
   src: url('/fonts/Karla-Regular.woff2') format('woff2');
+  font-display: swap;
 }
 @font-face {
   font-family: Karla;
   font-style: bold;
   font-weight: 700;
   src: url('/fonts/Karla-Bold.woff2') format('woff2');
+  font-display: swap;
 }
 @font-face {
   font-family: Inter;
   font-style: normal;
   font-weight: 400;
   src: url('/fonts/Inter-Regular.woff2') format('woff2');
+  font-display: swap;
 }
 @font-face {
   font-family: Inter;
   font-style: bold;
   font-weight: 700;
   src: url('/fonts/Inter-Bold.woff2') format('woff2');
+  font-display: swap;
 }
